<resources>
    <string name="app_name">TestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_explorer">Explorer</string>
    <string name="label_cart">Cart</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_account">Account</string>
    <string name="add_location">Add location</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="hot_sales">Hot sales</string>
    <string name="view_all">view all</string>
    <string name="select_category">Select category</string>
    <string name="buy_now">Buy now!</string>
    <string name="new_string">New</string>
    <string name="add_to_cart">Add to Cart %1$s</string>
    <string name="filter_option">Filter option</string>
    <string name="brand">Brand</string>
    <string name="done">Done</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="size_label">%1$s to %2$s inches</string>
    <string name="price_label">%1$s - %2$s</string>
</resources>