<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnPrimary"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="?attr/colorPrimary"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            app:icon="@drawable/icon_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/filter_option"
            app:layout_constraintTop_toTopOf="@id/close_button"
            app:layout_constraintBottom_toBottomOf="@id/close_button"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/brand_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/close_button"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/brand_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/border_background"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            app:layout_constraintTop_toBottomOf="@id/brand_label"/>

        <TextView
            android:id="@+id/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/price"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/brand_spinner"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/price_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/border_background"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            app:layout_constraintTop_toBottomOf="@id/price_label"/>

        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/size"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintTop_toBottomOf="@id/price_spinner"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/border_background"
            app:layout_constraintStart_toStartOf="@id/close_button"
            app:layout_constraintEnd_toEndOf="@id/done_button"
            app:layout_constraintTop_toBottomOf="@id/size_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>