<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="?attr/colorBackgroundFloating">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.ExplorerFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_filter"
                app:layout_constraintBottom_toBottomOf="@id/location_flow"
                app:layout_constraintEnd_toEndOf="@id/view_all_label"
                app:layout_constraintTop_toTopOf="@id/location_flow" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/location_flow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:constraint_referenced_ids="location_icon,location_name,uncover_arrow"
                app:flow_horizontalStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_location"
                app:tint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zihuatanejo, Gro" />

            <ImageView
                android:id="@+id/uncover_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_arrow_down" />

            <TextView
                android:id="@+id/select_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/select_category"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_flow" />

            <TextView
                android:id="@+id/view_all_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/view_all"
                android:textColor="?attr/colorSecondary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/select_category_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/select_category_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/select_category_label" />

            <androidx.cardview.widget.CardView
                android:id="@+id/search_card"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="40dp"
                app:cardElevation="5dp"
                app:layout_constraintEnd_toStartOf="@id/qr_code_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_list">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/qr_code_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:src="@drawable/icon_qr_code"
                app:elevation="5dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@id/search_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_card" />

            <TextView
                android:id="@+id/hot_sales_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hot_sales"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/select_category_label"
                app:layout_constraintTop_toBottomOf="@id/search_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="?attr/colorSecondary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/hot_sales_label"
                app:layout_constraintEnd_toEndOf="@id/view_all_label"
                app:layout_constraintTop_toTopOf="@id/hot_sales_label" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/hot_sales_view_pager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_label" />

            <TextView
                android:id="@+id/best_seller_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/best_seller"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@id/select_category_label"
                app:layout_constraintTop_toBottomOf="@id/hot_sales_view_pager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:textColor="?attr/colorSecondary"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/best_seller_label"
                app:layout_constraintEnd_toEndOf="@id/view_all_label"
                app:layout_constraintTop_toTopOf="@id/best_seller_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_seller_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/best_seller_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
